# springCli

./: README.md
.github/workflows/: audit.yml  ci.yml  release.yml
springup/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
springup/.github/workflows/: ci.yml  release.yml
springup/crates/springup-cli/: Cargo.toml
springup/crates/springup-cli/src/: cli.rs  lib.rs  main.rs
springup/crates/springup-cli/src/commands/: add.rs  completions.rs  config.rs  mod.rs  new.rs  update.rs  update_metadata.rs
springup/crates/springup-cli/src/ui/: logging.rs  messages.rs  mod.rs  summary.rs  theme.rs
springup/crates/springup-cli/src/wizard/: mod.rs
springup/crates/springup-cli/tests/: cli_help.rs  config_command.rs  dry_run.rs  new_command.rs
springup/crates/springup-cli/tests/common/: mod.rs
springup/crates/springup-core/: Cargo.toml
springup/crates/springup-core/src/: config.rs  error.rs  lib.rs  manifest.rs  plan.rs  template.rs
springup/crates/springup-core/src/initializr/: cache.rs  client.rs  mod.rs  models.rs
springup/crates/springup-core/tests/: snapshot_tests.rs
springup/crates/springup-core/tests/snapshots/: snapshot_tests__application_dev_yml.snap  snapshot_tests__application_prod_yml.snap  snapshot_tests__ci_gradle.snap  snapshot_tests__ci_maven.snap  snapshot_tests__docker_compose_no_db.snap  snapshot_tests__docker_compose_with_postgres.snap  snapshot_tests__dockerfile_gradle.snap  snapshot_tests__dockerfile_maven.snap  snapshot_tests__hexagonal_sample_controller.snap  snapshot_tests__layered_api_response_dto.snap  snapshot_tests__layered_global_exception_handler.snap  snapshot_tests__layered_sample_controller.snap  snapshot_tests__readme.snap
springup/crates/springup-templates/: Cargo.toml
springup/crates/springup-templates/assets/architectures/hexagonal/adapter/in/web/: SampleController.j2
springup/crates/springup-templates/assets/architectures/hexagonal/application/: GetSampleService.j2
springup/crates/springup-templates/assets/architectures/hexagonal/domain/model/: Sample.j2
springup/crates/springup-templates/assets/architectures/hexagonal/domain/port/in/: GetSampleUseCase.j2
springup/crates/springup-templates/assets/architectures/layered/controller/: HealthController.j2  SampleController.j2
springup/crates/springup-templates/assets/architectures/layered/dto/: ApiResponse.j2
springup/crates/springup-templates/assets/architectures/layered/entity/: SampleEntity.j2
springup/crates/springup-templates/assets/architectures/layered/exception/: GlobalExceptionHandler.j2
springup/crates/springup-templates/assets/architectures/layered/repository/: SampleRepository.j2
springup/crates/springup-templates/assets/architectures/layered/service/: SampleService.j2
springup/crates/springup-templates/assets/ci/github-actions/: ci.gradle.yml.j2  ci.maven.yml.j2
springup/crates/springup-templates/assets/config-profiles/: application-dev.yml.j2  application-prod.yml.j2
springup/crates/springup-templates/assets/docker/: .dockerignore  Dockerfile.gradle.j2  Dockerfile.maven.j2  docker-compose.yml.j2
springup/crates/springup-templates/assets/editorconfig/: .editorconfig.j2
springup/crates/springup-templates/assets/git/: gitignore
springup/crates/springup-templates/assets/readme/: README.md.j2
springup/crates/springup-templates/src/: lib.rs
springup/xtask/: Cargo.toml
springup/xtask/src/: main.rs
tool-results/: read_1783014387425_15d6da1ab0e5.txt  read_1783014390834_25c033921877.txt
upload/: spring-cli-build-spec.md
